--- a/css/light-theme.css
+++ b/css/light-theme.css
@@ -191,7 +191,10 @@ footer {
     justify-content: center;
     align-items: center;
     margin: 0vmin;
+    margin-left: -15px;
     overflow: hidden;
+    transform: skew(5deg);
+    width: 120%;
   
 .card {
       flex: 1;
@@ -212,9 +215,9 @@ footer {
     }
   
       &:hover {
-        flex-grow: 4;
+        flex-grow: 8;
         img {
-          filter: grayscale(0);
+          filter: blur(0px);
         }
       }
       img {
@@ -222,10 +225,10 @@ footer {
         height: 100%;
         object-fit: cover;
         transition: all 1s ease-in-out;
-        filter: grayscale(80%);
+        filter: blur(1px)
       }
-      &:not(:nth-child(6)) {
-        margin-right: 1em;
+      &:not(:nth-child(8)) {
+        margin-right: 0.5em;
       }
     }
   }
